# 3DEngine

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini
.claude/: settings.local.json
resources/scenes/: amiga.yaml  bunny.yaml  cat_statue.yaml  isometric_level.yaml  knot.yaml  knot_gen.yaml  shadow_point_test.yaml  sponza.yaml  suzanne.yaml  viking_room.yaml  world.yaml
src/: InputHandler.hpp  ShadowMap.hpp  ShadowRasterizer.hpp  ZBuffer.hpp  amigaRasterizer.hpp  app_config.hpp  app_state.hpp  application.cpp  application.hpp  axisRenderer.hpp  axis_renderer.hpp  bresenham.hpp  camera.hpp  clipping.hpp  color.hpp  constants.hpp  cube_shadow_map.hpp  cubemap.cpp  edge_walker.hpp  fonts.cpp  fonts.hpp  input_handler.hpp  light.hpp  main.cpp  material.hpp  platform_resources.hpp  polygon.hpp  projection.hpp  rasterizer.hpp  rasterizer_cubemap_shadow.hpp  rasterizer_shadow.hpp  rasterizer_utils.hpp  renderer.hpp  renderer_axis.hpp  renderer_overlay.hpp  scene.cpp  scene.hpp  scene_ui.hpp  shadow_map.hpp  shadow_rasterizer.hpp  (+8 more)
src/assets/: background_factory.cpp  background_factory.hpp  cubemap_loader.hpp  prefab_factory.cpp  prefab_factory.hpp  texture_loader.cpp  texture_loader.hpp
src/backgrounds/: background.hpp  backgroundFactory.cpp  backgroundFactory.hpp  hdrPanorama.cpp  imagepng.cpp  imagepng.hpp  skybox.cpp  skybox.hpp  twister.cpp  twister.hpp
src/ecs/: ComponentStore.hpp  LightComponent.hpp  LightSystem.hpp  MaterialSystem.hpp  MeshComponent.hpp  MeshSystem.hpp  PrefabFactory.cpp  PrefabFactory.hpp  Registry.hpp  RenderComponent.hpp  RotationSystem.hpp  ShadowComponent.hpp  ShadowSystem.cpp  ShadowSystem.hpp  TransformComponent.hpp  TransformSystem.hpp  mesh_system.hpp  prefab_factory.cpp  prefab_factory.hpp  registry.hpp  render_component.hpp  rotation_component.hpp  rotation_system.hpp  shadow_system.hpp  transform_system.hpp
src/effects/: AmigaFlatEffect.hpp  BlinnPhongEffect.hpp  FlatEffect.hpp  GouraudEffect.hpp  PhongEffect.hpp  TexturedBlinnPhongEffect.hpp  TexturedFlatEffect.hpp  TexturedGouraudEffect.hpp  TexturedPhongEffect.hpp  blinnPhongEffect.hpp  blinn_phong_effect.hpp  cubemap_shadow_effect.hpp  environmentMapEffect.hpp  environment_map_effect.hpp  flatEffect.hpp  flat_effect.hpp  geometry_shaders.hpp  gouraudEffect.hpp  gouraud_effect.hpp  lighting.hpp  phongEffect.hpp  phong_effect.hpp  shadowEffect.hpp  shadow_effect.hpp  texturedBlinnPhongEffect.hpp  texturedFlatEffect.hpp  texturedGouraudEffect.hpp  texturedPhongEffect.hpp  textured_blinn_phong_effect.hpp  textured_flat_effect.hpp  textured_gouraud_effect.hpp  textured_phong_effect.hpp  vertex_shaders.hpp  vertex_types.hpp
src/objects/: amiga.cpp  ascLoader.cpp  cube.cpp  icosahedron.cpp  icosahedron.hpp  objLoader.cpp  objLoader.hpp  plane.cpp  plane.hpp  solid.cpp  solid.hpp  test.cpp  tetrakis.cpp  torus.cpp  world.cpp
src/rasterizer/: rasterizer.hpp  rasterizer_shadow.hpp
src/scenes/: amigaScene.cpp  amigaScene.hpp  bunnyScene.cpp  bunnyScene.hpp  catStatueScene.cpp  catStatueScene.hpp  cubeScene.cpp  cubeScene.hpp  icosahedronScene.cpp  icosahedronScene.hpp  isometricLevelScene.cpp  isometricLevelScene.hpp  knotScene.cpp  knotScene.hpp  knotScenePoint.cpp  knotScenePoint.hpp  mountainsScene.cpp  mountainsScene.hpp  sceneFactory.cpp  sceneFactory.hpp  sceneLoader.cpp  sceneLoader.hpp  scene_factory.cpp  scene_factory.hpp  scene_loader.cpp  scene_loader.hpp  shadowPointTestScene.cpp  shadowPointTestScene.hpp  shadowTestScene.cpp  shadowTestScene.hpp  sponzaScene.cpp  sponzaScene.hpp  spyroLevelScene.cpp  spyroLevelScene.hpp  starScene.cpp  starScene.hpp  suzanneScene.cpp  suzanneScene.hpp  tetrakisScene.cpp  tetrakisScene.hpp  (+6 more)
tests/: test_ecs.cpp  test_math.cpp  test_transform.cpp
